# crypto-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  bot.py  docker-compose.yml  fetcher.py  liquidate.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
bot/: __init__.py  account.py  bot.py  config.py  logger.py  market.py  tracker.py  utils.py
crypto_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research/: analyze_bidirectional.py  analyze_live_trades.py  backtest_binance_bidirectional_vbo.py  backtest_binance_hold_short.py  backtest_funding_arbitrage.py  backtest_grid_trading.py  backtest_hybrid_vbo.py  backtest_hybrid_vbo_grid.py  backtest_inverse_vbo.py  backtest_mean_reversion.py  backtest_vbo_comparison.py  backtest_vbo_funding_hybrid.py  backtest_vbo_portfolio.py  check_overfitting.py  example_modular_backtest.py  test_hybrid.py  test_parameter_sensitivity.py
research/strategies/: __init__.py  bidirectional_vbo.py  common.py  funding.py  hybrid_vbo_funding.py  vbo.py
scripts/: liquidate.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_bot_flow.py
tests/unit/: __init__.py  test_account.py  test_bot_accounts.py  test_bot_runtime.py  test_config.py  test_logger.py  test_market.py  test_tracker.py  test_utils.py
